--- a/templates/home.html
+++ b/templates/home.html
@@ -101,7 +101,7 @@
         <div class="modal-content">
           <div class="modal-header" style="background-color: #e50914;color: white;">
             <!-- <h5 class="modal-title" id="exampleModalLabel3">Hey there!</h5> -->
-            <h5 class="modal-title" id="exampleModalLabel3">Hey 您好! 這是Azure CI/CD測試</h5>
+            <h5 class="modal-title" id="exampleModalLabel3">Hey 您好!</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true" style="color: white">&times;</span>
             </button>
